# MeowPi-demo

./: .gitignore  CMakeLists.txt  README.md
include/: KmNetwork.h  catNetwork.h  catbox_cmd.h  configuration.h  hid_controller.h  hid_handle.h  ipcHelper.h  kmbox_cmd.h  lvgl_display.h  uart.h  version.h  wrapper.h
include/hid/: keyboard.h  mouse.h
src/: CMakeLists.txt  KmNtwork.cpp  catNtwork.cpp  configuration.cpp  hid_controller.cpp  hid_handle.cpp  ipcHelper.cpp  lvgl_display.cpp  main.cpp  uart.cpp  wrapper.cpp
src/ui/: ui.c  ui.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
src/ui/fonts/: ui_font_FontChina48.c
src/ui/images/: ui_img_492698769.c  ui_img_aboutbj_png.c  ui_img_arrow_png.c  ui_img_bootlogo_png.c  ui_img_dropkey_png.c  ui_img_dropkmbox_png.c  ui_img_gesture_png.c  ui_img_iconcatbox_png.c  ui_img_iconkmbox_png.c  ui_img_iconmusic_png.c  ui_img_iconscreen_png.c  ui_img_iconset_png.c  ui_img_small1_png.c  ui_img_small2_png.c  ui_img_small3_png.c  ui_img_small4_png.c  ui_img_small5_png.c  ui_img_small6_png.c
src/ui/screens/: ui_ScreenCATBOX.c  ui_ScreenHome.c  ui_ScreenKMBOX.c  ui_ScreenLOGO.c  ui_ScreenScreen.c  ui_ScreenSet.c  ui_ScreenSetGesture.c  ui_ScreenSetIP.c  ui_ScreenSetLAW.c  ui_ScreenSetUpdate.c  ui_ScreenSetWallpaper.c  ui_ScreenSetabout.c
